--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184576">1958 Imperial: What It's Like to Drive an Auto-Pilot Car</a>
+                                    <a href="https://news.ycombinator.com/item?id=17181775">Jeri Ellsworth and the demise of CastAR [audio]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.imperialclub.com/Articles/58AutoPilot/index.htm">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=userbinator">userbinator</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 02:31:59 &nbsp;•&nbsp;
-                                    22 comments &nbsp;•&nbsp;
-                                    59.0 points
+                                    <a class="node" href="https://theamphour.com/394-jeri-ellsworth-and-the-demise-of-castar/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ChrisGammell">ChrisGammell</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 18:29:20 &nbsp;•&nbsp;
+                                    3 comments &nbsp;•&nbsp;
+                                    61.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 10:30:05.094693</strong>
+            <strong>Last update at 2018-05-30 10:40:03.967277</strong>
         </div>
     </div>
 </div>
