--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -234,7 +234,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=brahmwg">brahmwg</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 00:47:59 &nbsp;•&nbsp;
                                     12 comments &nbsp;•&nbsp;
-                                    95.0 points
+                                    96.0 points
                                 </span>
                             </td>
                         </tr>
@@ -406,6 +406,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17184410">Cervus: A WebAssembly subsystem for Linux</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 01:54:27 &nbsp;•&nbsp;
+                                    15 comments &nbsp;•&nbsp;
+                                    85.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17171644">Sewage Is Helping Cities Flush Out the Opioid Crisis</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -435,26 +455,6 @@
                                     2018-05-27 19:33:01 &nbsp;•&nbsp;
                                     27 comments &nbsp;•&nbsp;
                                     84.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184410">Cervus: A WebAssembly subsystem for Linux</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 01:54:27 &nbsp;•&nbsp;
-                                    13 comments &nbsp;•&nbsp;
-                                    83.0 points
                                 </span>
                             </td>
                         </tr>
@@ -526,14 +526,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166642">The ‘suprasecular’ stagnation</a>
+                                    <a href="https://news.ycombinator.com/item?id=17177668">Three-sided Football</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://voxeu.org/article/suprasecular-stagnation">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lkrubner">lkrubner</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 12:29:35 &nbsp;•&nbsp;
-                                    51 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://en.wikipedia.org/wiki/Three_sided_football">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 09:31:12 &nbsp;•&nbsp;
+                                    26 comments &nbsp;•&nbsp;
                                     77.0 points
                                 </span>
                             </td>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169532">How Brain Waves Surf Sound Waves to Process Speech</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166642">The ‘suprasecular’ stagnation</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://nautil.us/blog/how-brain-waves-surf-sound-waves-to-process-speech">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 22:48:37 &nbsp;•&nbsp;
-                                    9 comments &nbsp;•&nbsp;
-                                    76.0 points
+                                    <a class="node" href="https://voxeu.org/article/suprasecular-stagnation">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lkrubner">lkrubner</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 12:29:35 &nbsp;•&nbsp;
+                                    51 comments &nbsp;•&nbsp;
+                                    77.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 10:40:03.967277</strong>
+            <strong>Last update at 2018-05-30 10:50:04.618990</strong>
         </div>
     </div>
 </div>
