--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172305">Vuetube – Video resources that will help you to improve your Vue skills</a>
+                                    <a href="https://news.ycombinator.com/item?id=17184023">A Universal Law of Procrastination (2016)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://vuetube.surge.sh">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=flowck">flowck</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 13:37:26 &nbsp;•&nbsp;
-                                    21 comments &nbsp;•&nbsp;
-                                    104.0 points
+                                    <a class="node" href="https://physicstoday.scitation.org/doi/10.1063/PT.3.3064">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=brahmwg">brahmwg</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 00:47:59 &nbsp;•&nbsp;
+                                    13 comments &nbsp;•&nbsp;
+                                    102.0 points
                                 </span>
                             </td>
                         </tr>
@@ -193,28 +193,8 @@
                                     <a class="node" href="https://ristret.com/s/qk8wpt/philosophy_computational_complexity">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=matt_d">matt_d</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 11:51:42 &nbsp;•&nbsp;
-                                    8 comments &nbsp;•&nbsp;
-                                    101.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184023">A Universal Law of Procrastination (2016)</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://physicstoday.scitation.org/doi/10.1063/PT.3.3064">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=brahmwg">brahmwg</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 00:47:59 &nbsp;•&nbsp;
-                                    13 comments &nbsp;•&nbsp;
-                                    99.0 points
+                                    9 comments &nbsp;•&nbsp;
+                                    102.0 points
                                 </span>
                             </td>
                         </tr>
@@ -254,7 +234,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=apo">apo</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 00:56:31 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
-                                    96.0 points
+                                    98.0 points
                                 </span>
                             </td>
                         </tr>
@@ -274,7 +254,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:27 &nbsp;•&nbsp;
                                     16 comments &nbsp;•&nbsp;
-                                    94.0 points
+                                    97.0 points
                                 </span>
                             </td>
                         </tr>
@@ -354,7 +334,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=algorithm314">algorithm314</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 05:38:51 &nbsp;•&nbsp;
                                     5 comments &nbsp;•&nbsp;
-                                    89.0 points
+                                    90.0 points
                                 </span>
                             </td>
                         </tr>
@@ -486,6 +466,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17177668">Three-sided Football</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://en.wikipedia.org/wiki/Three_sided_football">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 09:31:12 &nbsp;•&nbsp;
+                                    29 comments &nbsp;•&nbsp;
+                                    80.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169291">An amateur investigator's hunt for the Zodiac killer</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -526,14 +526,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177668">Three-sided Football</a>
+                                    <a href="https://news.ycombinator.com/item?id=17184407">Zig: programming language designed for robustness optimality and clarity [video]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://en.wikipedia.org/wiki/Three_sided_football">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 09:31:12 &nbsp;•&nbsp;
-                                    28 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.youtube.com/watch?v=Z4oYSByyRak">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 01:54:10 &nbsp;•&nbsp;
+                                    24 comments &nbsp;•&nbsp;
                                     78.0 points
                                 </span>
                             </td>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184407">Zig: programming language designed for robustness optimality and clarity [video]</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166642">The ‘suprasecular’ stagnation</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.youtube.com/watch?v=Z4oYSByyRak">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 01:54:10 &nbsp;•&nbsp;
-                                    24 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://voxeu.org/article/suprasecular-stagnation">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lkrubner">lkrubner</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 12:29:35 &nbsp;•&nbsp;
+                                    51 comments &nbsp;•&nbsp;
                                     77.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 11:20:03.307159</strong>
+            <strong>Last update at 2018-05-30 11:30:03.083366</strong>
         </div>
     </div>
 </div>
