--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17184605">Neveragain.tech</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://neveragain.tech/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=laurex">laurex</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 02:39:59 &nbsp;•&nbsp;
+                                    5 comments &nbsp;•&nbsp;
+                                    14.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17183418">Tesla in Autopilot mode hit a parked California police car</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -355,26 +375,6 @@
                                     2018-05-29 17:24:01 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     10.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17186591">How Scrum disempowers developers (and destroyed Agile)</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.lambdacambridge.com/blog/how-scrum-disempowers-developers-and-destroys-agile">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Robin_Message">Robin_Message</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 10:53:13 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
-                                    9.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 11:30:03.083366</strong>
+            <strong>Last update at 2018-05-30 11:40:03.909295</strong>
         </div>
     </div>
 </div>
