--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -173,7 +173,7 @@
                                     <a class="node" href="https://physicstoday.scitation.org/doi/10.1063/PT.3.3064">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=brahmwg">brahmwg</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 00:47:59 &nbsp;•&nbsp;
-                                    13 comments &nbsp;•&nbsp;
+                                    15 comments &nbsp;•&nbsp;
                                     102.0 points
                                 </span>
                             </td>
@@ -186,15 +186,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178244">The Philosophy of Computational Complexity</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175677">A Graduate Course in Applied Cryptography (2017)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://ristret.com/s/qk8wpt/philosophy_computational_complexity">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=matt_d">matt_d</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 11:51:42 &nbsp;•&nbsp;
-                                    9 comments &nbsp;•&nbsp;
-                                    102.0 points
+                                    <a class="node" href="http://toc.cryptobook.us">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=apo">apo</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 00:56:31 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    99.0 points
                                 </span>
                             </td>
                         </tr>
@@ -226,26 +226,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175677">A Graduate Course in Applied Cryptography (2017)</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://toc.cryptobook.us">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=apo">apo</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 00:56:31 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    98.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17184410">Cervus: A WebAssembly subsystem for Linux</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -253,7 +233,7 @@
                                     <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:27 &nbsp;•&nbsp;
-                                    16 comments &nbsp;•&nbsp;
+                                    17 comments &nbsp;•&nbsp;
                                     97.0 points
                                 </span>
                             </td>
@@ -506,6 +486,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17184407">Zig: programming language designed for robustness optimality and clarity [video]</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.youtube.com/watch?v=Z4oYSByyRak">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 01:54:10 &nbsp;•&nbsp;
+                                    24 comments &nbsp;•&nbsp;
+                                    79.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17179378">Self-driving technology is going to change more than cars</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -526,15 +526,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184407">Zig: programming language designed for robustness optimality and clarity [video]</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166642">The ‘suprasecular’ stagnation</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.youtube.com/watch?v=Z4oYSByyRak">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 01:54:10 &nbsp;•&nbsp;
-                                    24 comments &nbsp;•&nbsp;
-                                    78.0 points
+                                    <a class="node" href="https://voxeu.org/article/suprasecular-stagnation">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lkrubner">lkrubner</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 12:29:35 &nbsp;•&nbsp;
+                                    51 comments &nbsp;•&nbsp;
+                                    77.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166642">The ‘suprasecular’ stagnation</a>
+                                    <a href="https://news.ycombinator.com/item?id=17169532">How Brain Waves Surf Sound Waves to Process Speech</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://voxeu.org/article/suprasecular-stagnation">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lkrubner">lkrubner</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 12:29:35 &nbsp;•&nbsp;
-                                    51 comments &nbsp;•&nbsp;
-                                    77.0 points
+                                    <a class="node" href="http://nautil.us/blog/how-brain-waves-surf-sound-waves-to-process-speech">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 22:48:37 &nbsp;•&nbsp;
+                                    9 comments &nbsp;•&nbsp;
+                                    76.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 11:30:03.083366</strong>
+            <strong>Last update at 2018-05-30 11:40:03.909295</strong>
         </div>
     </div>
 </div>
